Revert "Fix GH raw plaintext"
This reverts commit fe623c36e93e34a3472f15e71b2588cb561f08d4.

--- a/index.html
+++ b/index.html
@@ -83,23 +83,21 @@
                     var filename = "EC60X_" + configIndices.join('_') + ".dxf";
                     var fileUrl = 'https://raw.githubusercontent.com/Cipulot/ec60x-plate-maker/main/Plate_Indexed_Name/' + filename;
 
-                    fetch(fileUrl)
-                        .then(resp => resp.blob())
-                        .then(blob => {
-                            var url = window.URL.createObjectURL(blob);
+                    // Create an invisible <a> element with the download attribute
+                    var downloadLink = document.createElement('a');
+                    downloadLink.href = fileUrl;
+                    downloadLink.download = filename;
+                    downloadLink.style.display = 'none';
 
-                            var downloadLink = document.createElement('a');
-                            downloadLink.href = url;
-                            downloadLink.download = filename;
-                            downloadLink.style.display = 'none';
+                    // Append the <a> element to the body and simulate a click on it
+                    document.body.appendChild(downloadLink);
+                    downloadLink.click();
 
-                            document.body.appendChild(downloadLink);
-                            downloadLink.click();
-
-                            document.body.removeChild(downloadLink);
-                        });
+                    // Remove the <a> element from the body
+                    document.body.removeChild(downloadLink);
                 }
             });
+        });
     </script>
 </body>
 
