--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
             <option value="13">JIS WK</option>
             <option value="14">JIS WKL</option>
         </select>
-        <!-- Repeat for other configurations -->
+
+        <style>
+            button {
+                margin-top: 25px;
+            }
+        </style>
         <button type="submit">Download</button>
     </form>
 
@@ -105,6 +110,19 @@
             });
         });
     </script>
+
+    <style>
+        footer {
+            margin-top: 50px;
+        }
+    </style>
+
+    <footer>
+        <p>&copy; 2024 Cipulot</p>
+        <a href="https://cipulot.squarespace.com/" target="_blank">
+            <img src="https://squarespace.com/favicon.ico" alt="Visit my Squarespace" />
+        </a>
+    </footer>
 </body>
 
 </html>
