--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
 <head>
     <title>EC60X Plate Maker</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         form label,
         form select,
         form button {
             display: block;
             margin-bottom: 10px;
+        }
+
+        select, button {
+            min-width: 100%;
+            height: 40px;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                font-size: 18px;
+            }
+
+            button {
+                padding: 15px 30px;
+                margin-top: 25px;
+            }
         }
     </style>
 </head>
