--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EC60X Plate Maker</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <style>
         form label,
         form select,
@@ -28,6 +32,14 @@
                 padding: 15px 30px;
                 margin-top: 25px;
             }
+        }
+
+        button {
+            margin-top: 25px;
+        }
+
+        footer {
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -88,14 +100,16 @@
             <option value="13">JIS WK</option>
             <option value="14">JIS WKL</option>
         </select>
-
-        <style>
-            button {
-                margin-top: 25px;
-            }
-        </style>
         <button type="submit">Download</button>
     </form>
+
+    <footer>
+        <p>&copy; 2024 Cipulot</p>
+        <p>All files are provided under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> License.</p>
+        <a href="https://cipulot.squarespace.com/" target="_blank">
+            <img src="https://squarespace.com/favicon.ico" alt="Visit my Squarespace" />
+        </a>
+    </footer>
 
     <script>
         $(document).ready(function () {
@@ -115,44 +129,33 @@
                     var configIndices = $('select').not('#board').map(function () { return $(this).val(); }).get();
                     var filename = boardValue + "_" + configIndices.join('_') + ".dxf";
                     var fileUrl = 'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/Plate_Indexed_Name/' + boardValue + '_Plate_Indexed_Name/' + filename;
-
+                    var licenseUrl = 'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/LICENSE';
 
                     fetch(fileUrl)
                         .then(response => response.json())
                         .then(data => {
                             var base64String = data.content;
                             var decodedData = atob(base64String);
-                            var blob = new Blob([decodedData], { type: "application/dxf" });
-                            var url = window.URL.createObjectURL(blob);
 
-                            var downloadLink = document.createElement('a');
-                            downloadLink.href = url;
-                            downloadLink.download = filename;
-                            downloadLink.style.display = 'none';
+                            var zip = new JSZip();
+                            zip.file(filename, decodedData);
 
-                            document.body.appendChild(downloadLink);
-                            downloadLink.click();
+                            fetch(licenseUrl)
+                                .then(response => response.json())
+                                .then(licenseData => {
+                                    var licenseBase64 = licenseData.content;
+                                    var licenseDecoded = atob(licenseBase64);
+                                    zip.file("LICENSE", licenseDecoded);
 
-                            document.body.removeChild(downloadLink);
+                                    zip.generateAsync({ type: "blob" }).then(function (content) {
+                                        saveAs(content, boardValue + "_" + configIndices.join('_') + ".zip");
+                                    });
+                                });
                         });
                 }
             });
         });
     </script>
-
-    <style>
-        footer {
-            margin-top: 50px;
-        }
-    </style>
-
-    <footer>
-        <p>&copy; 2024 Cipulot</p>
-        <p>All files are provided under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> License.</p>
-        <a href="https://cipulot.squarespace.com/" target="_blank">
-            <img src="https://squarespace.com/favicon.ico" alt="Visit my Squarespace" />
-        </a>
-    </footer>
 </body>
 
 </html>
