--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body>
     <h1>EC60X Plate Maker</h1>
-    <p>This plate maker is specifically for the EC60X PCB and its own screw hole placement. It is NOT a plate maker for
+    <p>This plate maker is specifically for the EC60X PCB (Rev 1.1 onwards) and its own screw hole placement. It is NOT a plate maker for
         the deprecated EC60.</p>
     <form id="configForm">
         <label for="board">Base Board:</label>
