--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 <body>
     <h1>EC60X Plate Maker</h1>
-    <p>This plate maker is specifically for the EC60X PCB (Rev 1.2 onwards) and its own screw hole placement. It is NOT a plate maker for
-        the deprecated EC60.</p>
+    <p>This plate maker is specifically for the EC60X PCB (Rev 1.2 onwards) and its own screw hole placement. It is NOT
+        a plate maker for the deprecated EC60.</p>
     <form id="configForm">
         <label for="board">Base Board:</label>
         <select id="board">
@@ -173,35 +173,51 @@
                                             }
                                             zip.file("LICENSE", licenseByteArray);
 
-                                            if (holeType === "Densus_Inserts") {
-                                                var densusGuideUrl = 'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/densus_ec_insert_design_guide.png';
-                                                fetch(densusGuideUrl)
-                                                    .then(response => response.json())
-                                                    .then(densusData => {
-                                                        if (densusData.encoding === 'base64') {
-                                                            var densusBase64 = densusData.content.replace(/\n/g, '');
-                                                            var densusBinary = atob(densusBase64);
-                                                            var densusByteArray = new Uint8Array(densusBinary.length);
-                                                            for (var i = 0; i < densusBinary.length; i++) {
-                                                                densusByteArray[i] = densusBinary.charCodeAt(i);
-                                                            }
-                                                            zip.file("densus_ec_insert_design_guide.png", densusByteArray);
+                                            var additionalFiles = [];
 
-                                                            zip.generateAsync({ type: "blob" }).then(function (content) {
-                                                                saveAs(content, boardValue + "_" + configIndices.join('_') + "_Densus_Inserts.zip");
-                                                            });
-                                                        } else {
-                                                            throw new Error('Densus guide content is not base64 encoded');
-                                                        }
-                                                    })
-                                                    .catch(error => {
-                                                        console.error('Error fetching Densus guide:', error);
-                                                    });
-                                            } else {
-                                                zip.generateAsync({ type: "blob" }).then(function (content) {
-                                                    saveAs(content, boardValue + "_" + configIndices.join('_') + ".zip");
-                                                });
+                                            // Handle additional files for EC60X_Tray_Mount
+                                            if (boardValue === "EC60X_Tray_Mount") {
+                                                additionalFiles.push(
+                                                    'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/simple_countersunk.png',
+                                                    'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/special_countersunk.png',
+                                                    'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/tray_mount_countersinking.pdf'
+                                                );
                                             }
+
+                                            // Add appropriate guide files based on hole type
+                                            if (holeType === "Densus_Inserts") {
+                                                additionalFiles.push('https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/densus_ec_insert_design_guide.png',
+                                                    'https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/simple_counterbore.png');
+                                            } else if (holeType === "Tapped_Holes") {
+                                                additionalFiles.push('https://api.github.com/repos/Cipulot/ec60x-plate-maker/contents/simple_tapped.png');
+                                            }
+
+                                            // Fetch and add all additional files to the zip
+                                            Promise.all(additionalFiles.map(fileUrl => fetch(fileUrl).then(response => response.json())))
+                                                .then(fileDataArray => {
+                                                    fileDataArray.forEach(fileData => {
+                                                        if (fileData.encoding === 'base64') {
+                                                            var base64 = fileData.content.replace(/\n/g, '');
+                                                            var binary = atob(base64);
+                                                            var byteArray = new Uint8Array(binary.length);
+                                                            for (var i = 0; i < binary.length; i++) {
+                                                                byteArray[i] = binary.charCodeAt(i);
+                                                            }
+                                                            var fileName = fileData.name;
+                                                            zip.file(fileName, byteArray);
+                                                        } else {
+                                                            throw new Error('File content is not base64 encoded: ' + fileData.name);
+                                                        }
+                                                    });
+
+                                                    // Generate and save the zip file
+                                                    zip.generateAsync({ type: "blob" }).then(function (content) {
+                                                        saveAs(content, boardValue + "_" + configIndices.join('_') + (holeType === "Densus_Inserts" ? "_Densus_Inserts.zip" : holeType === "Tapped_Holes" ? "_Tapped_Holes.zip" : ".zip"));
+                                                    });
+                                                })
+                                                .catch(error => {
+                                                    console.error('Error fetching additional files:', error);
+                                                });
                                         } else {
                                             throw new Error('License content is not base64 encoded');
                                         }
